--- a/index.html
+++ b/index.html
@@ -1,290 +1,165 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>GM Ritual Dashboard</title>
-  <style>
-    :root{--bg:#0f1114;--card:#0d1116;--btn:#2b6df6;--muted:#9aa3b2;--accent:#7c3aed}
-    body{margin:0;font-family:Inter,system-ui,Segoe UI,Roboto,"Helvetica Neue",Arial;background:linear-gradient(180deg,#0b0c0f,#0f1114);color:#fff;min-height:100vh;display:flex;flex-direction:column;align-items:center;padding:28px}
-    h1{font-size:28px;margin:8px 0 24px;text-align:center}
-    .btn{display:inline-block;padding:14px 30px;border-radius:12px;background:var(--btn);color:#fff;text-decoration:none;font-weight:600;cursor:pointer;box-shadow:0 6px 18px rgba(43,109,246,.15)}
-    .btn.gray{background:#333}
-    .btn.secondary{background:var(--accent)}
-    .wrap{width:100%;max-width:520px;text-align:center}
-    .spacer{height:18px}
-    .status{margin-top:14px;color:var(--muted)}
-    .walletInfo{position:fixed;right:16px;top:16px;background:#062; padding:8px 12px;border-radius:10px; color:#eaffea;display:none}
-    .walletInfo.show{display:block}
-  </style>
+<meta charset="UTF-8">
+<title>GM Ritual Dashboard ⚡</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+body {
+  margin: 0;
+  padding: 0;
+  background: #0d0d0d;
+  color: white;
+  text-align: center;
+  font-family: Arial, sans-serif;
+}
+button {
+  border: none;
+  padding: 16px 28px;
+  font-size: 20px;
+  border-radius: 12px;
+  cursor: pointer;
+  width: 80%;
+  margin: 14px auto;
+  display: block;
+  color: #fff;
+}
+#connectBtn { background: #1e5cff; }
+#gmBtn { background: #005bbb; }
+#gnBtn { background: #7b3ea9; }
+#sleepBtn { background: #555; }
+
+.disabled {
+  opacity: 0.4;
+  pointer-events: none;
+}
+</style>
+
+<!-- WALLET CONNECT V2 -->
+<script src="https://unpkg.com/@walletconnect/web3-provider@1.8.0/dist/umd/index.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/web3@1.10.0/dist/web3.min.js"></script>
+
 </head>
 <body>
-  <div class="wrap">
-    <h1>GM Ritual Dashboard ⚡</h1>
 
-    <button id="connectBtn" class="btn">Connect Wallet</button>
-    <div class="spacer"></div>
+<h1>GM Ritual Dashboard ⚡</h1>
 
-    <div>
-      <button id="gmBtn" class="btn" style="width:220px;margin:8px" disabled>GM Ritual 🌞</button>
-      <button id="gnBtn" class="btn secondary" style="width:220px;margin:8px" disabled>GN Ritual 🌙</button>
-      <button id="sleepBtn" class="btn gray" style="width:220px;margin:8px" disabled>GoSleep 😴</button>
-    </div>
+<button id="connectBtn">Connect Wallet</button>
+<button id="gmBtn" class="disabled">GM Ritual 🌞</button>
+<button id="gnBtn" class="disabled">GN Ritual 🌙</button>
+<button id="sleepBtn" class="disabled">GoSleep Ritual 😴</button>
 
-    <div class="spacer"></div>
-    <a id="deployLink" href="/deploy" style="color:#67b0ff;text-decoration:underline">Deploy your contract 🚀</a>
+<p><a href="deploy.html" style="color:#4da6ff; text-decoration:none;">Deploy your contract 🚀</a></p>
 
-    <p class="status" id="statusText">Not connected</p>
-  </div>
+<script>
+const BASE_CHAIN_ID_DEC = 8453;
+const BASE_CHAIN_ID_HEX = "0x2105";
+const BASE_RPC_URL = "https://mainnet.base.org";
+const CONTRACT_ADDRESS = "0x0000000000000000000000000000000000000000"; // isi nanti
 
-  <div id="walletInfo" class="walletInfo">0x...</div>
+let provider = null;
+let web3 = null;
+let selectedAccount = null;
 
-  <!-- libs -->
-  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js?v=1"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.8.0/dist/umd/index.min.js?v=1"></script>
+function showError(msg) { alert(msg); }
 
-  <script>
-  (function(){
-    // --- CONFIG: ganti sesuai kebutuhan ---
-    const BASE_CHAIN_ID_HEX = '0x2135'; // 8453 in hex
-    const BASE_CHAIN_ID_DEC = 8453;
-    const BASE_RPC = 'https://mainnet.base.org'; // public base RPC
-    // placeholder contract (ganti CONTRACT_ADDRESS dan CONTRACT_ABI)
-    const CONTRACT_ADDRESS = '0x0000000000000000000000000000000000000000';
-    const CONTRACT_ABI = []; // isi ABI disini
+async function switchToBase() {
+  if (!window.ethereum) return;
 
-    // --- state ---
-    let provider = null;         // ethers provider wrapper (Web3Provider)
-    let rawProvider = null;      // window.ethereum atau WalletConnectProvider
-    let signer = null;
-    let account = null;
-
-    const connectBtn = document.getElementById('connectBtn');
-    const statusText = document.getElementById('statusText');
-    const walletInfo = document.getElementById('walletInfo');
-    const gmBtn = document.getElementById('gmBtn');
-    const gnBtn = document.getElementById('gnBtn');
-    const sleepBtn = document.getElementById('sleepBtn');
-
-    function setStatus(t){
-      statusText.innerText = t;
-      console.log('[STATUS]', t);
-    }
-
-    function showWallet(addr){
-      walletInfo.innerText = addr;
-      walletInfo.classList.add('show');
-    }
-
-    function enableRitualButtons(enable){
-      gmBtn.disabled = !enable;
-      gnBtn.disabled = !enable;
-      sleepBtn.disabled = !enable;
-      if(enable) {
-        gmBtn.style.opacity = '1';
-        gnBtn.style.opacity = '1';
-        sleepBtn.style.opacity = '1';
-      } else {
-        gmBtn.style.opacity = '.6';
-        gnBtn.style.opacity = '.6';
-        sleepBtn.style.opacity = '.6';
-      }
-    }
-
-    async function trySwitchToBase(){
-      try {
-        const chainId = await rawProvider.request({method:'eth_chainId'});
-        console.log('current chainId', chainId);
-        if(chainId !== BASE_CHAIN_ID_HEX){
-          // try to switch
-          try {
-            await rawProvider.request({
-              method: 'wallet_switchEthereumChain',
-              params: [{ chainId: BASE_CHAIN_ID_HEX }]
-            });
-            setStatus('Switched to Base network');
-            return true;
-          } catch (switchErr){
-            // if chain not added, try add
-            console.warn('switch failed', switchErr);
-            try {
-              await rawProvider.request({
-                method: 'wallet_addEthereumChain',
-                params: [{
-                  chainId: BASE_CHAIN_ID_HEX,
-                  chainName: 'Base Mainnet',
-                  nativeCurrency: { name: 'ETH', symbol: 'ETH', decimals: 18 },
-                  rpcUrls: [BASE_RPC],
-                  blockExplorerUrls: ['https://basescan.org']
-                }]
-              });
-              setStatus('Added Base network, please confirm switch in wallet');
-              return true;
-            } catch (addErr){
-              console.error('add chain failed', addErr);
-              alert('Please switch your wallet network to Base (8453) manually.');
-              return false;
-            }
-          }
-        } else {
-          setStatus('On Base network');
-          return true;
-        }
-      } catch(e){
-        console.error('chain check failed', e);
-        alert('Unable to check/switch chain. See console.');
-        return false;
-      }
-    }
-
-    async function enableWalletConnectFallback(){
-      // fallback: use WalletConnectProvider (v1) from CDN
-      const WalletConnectProvider = window.WalletConnectProvider.default;
-      if(!WalletConnectProvider){
-        throw new Error('WalletConnectProvider not available');
-      }
-      const wcProvider = new WalletConnectProvider({
-        rpc: { [BASE_CHAIN_ID_DEC]: BASE_RPC },
-        chainId: BASE_CHAIN_ID_DEC,
-        qrcode: true
-      });
-      // enable will open QR / deep link
-      await wcProvider.enable();
-      return wcProvider;
-    }
-
-    async function connect(){
-      setStatus('Connecting...');
-      try {
-        if(window.ethereum){
-          rawProvider = window.ethereum;
-          provider = new ethers.providers.Web3Provider(rawProvider, 'any');
-          await rawProvider.request({ method: 'eth_requestAccounts' });
-        } else {
-          // fallback to WalletConnect provider
-          rawProvider = await enableWalletConnectFallback();
-          provider = new ethers.providers.Web3Provider(rawProvider, 'any');
-        }
-
-        signer = provider.getSigner();
-        account = await signer.getAddress();
-        showWallet(account);
-        setStatus('Connected: ' + account);
-        connectBtn.innerText = 'Disconnect';
-        connectBtn.dataset.connected = '1';
-
-        // events
-        if(rawProvider.on){
-          rawProvider.on('accountsChanged', (accs)=> {
-            console.log('accountsChanged', accs);
-            if(accs && accs.length) {
-              account = accs[0];
-              showWallet(account);
-              setStatus('Account changed: '+account);
-            } else {
-              disconnect();
-            }
-          });
-          rawProvider.on('chainChanged', (chainId) => {
-            console.log('chainChanged', chainId);
-            setStatus('Chain changed: ' + chainId);
-            // if not base, disable
-            if(chainId === BASE_CHAIN_ID_HEX) enableRitualButtons(true); else enableRitualButtons(false);
-          });
-          rawProvider.on('disconnect', (code, reason) => {
-            console.log('disconnect', code, reason);
-            disconnect();
-          });
-        }
-
-        // make sure on Base
-        const ok = await trySwitchToBase();
-        if(ok){
-          enableRitualButtons(true);
-        } else {
-          enableRitualButtons(false);
-        }
-      } catch(err){
-        console.error('connect failed', err);
-        alert('Connection failed: ' + (err.message || err));
-        setStatus('Not connected');
-      }
-    }
-
-    async function disconnect(){
-      try {
-        if(rawProvider && rawProvider.disconnect && typeof rawProvider.disconnect === 'function'){
-          await rawProvider.disconnect();
-        }
-      } catch(e){ console.warn('provider disconnect err', e); }
-      provider = null; rawProvider = null; signer = null; account = null;
-      connectBtn.innerText = 'Connect Wallet';
-      connectBtn.dataset.connected = '';
-      showWallet('0x...');
-      setStatus('Not connected');
-      enableRitualButtons(false);
-    }
-
-    connectBtn.addEventListener('click', async ()=>{
-      if(connectBtn.dataset.connected === '1'){
-        await disconnect();
-        return;
-      }
-      await connect();
+  try {
+    await window.ethereum.request({
+      method: "wallet_switchEthereumChain",
+      params: [{ chainId: BASE_CHAIN_ID_HEX }]
     });
-
-    // Demo ritual functions (replace with actual contract calls)
-    async function performRitual(type){
-      if(!signer) return alert('Connect wallet first!');
-      // sanity check chain
+  } catch (switchError) {
+    if (switchError.code === 4902) {
       try {
-        const chain = await rawProvider.request({ method: 'eth_chainId' });
-        if(chain !== BASE_CHAIN_ID_HEX) {
-          alert('Please switch to Base network (8453) and try again.');
-          return;
-        }
-      } catch(e){
-        console.error('chain check error', e);
+        await window.ethereum.request({
+          method: "wallet_addEthereumChain",
+          params: [{
+            chainId: BASE_CHAIN_ID_HEX,
+            chainName: "Base Mainnet",
+            rpcUrls: [BASE_RPC_URL],
+            blockExplorerUrls: ["https://basescan.org"],
+            nativeCurrency: {
+              name: "ETH",
+              symbol: "ETH",
+              decimals: 18
+            }
+          }]
+        });
+      } catch (addErr) {
+        console.log(addErr);
       }
-      // example: call contract function (replace with actual ABI & address)
-      if(!CONTRACT_ABI.length || CONTRACT_ADDRESS === '0x0000000000000000000000000000000000000000'){
-        // fallback UI-only demo (no on-chain)
-        alert('Ritual "'+type+'" triggered (demo mode). Replace CONTRACT_ADDRESS & ABI to enable real transaction.');
-        setStatus(`Ritual ${type} (demo)`);
-        return;
-      }
-
-      try {
-        const contract = new ethers.Contract(CONTRACT_ADDRESS, CONTRACT_ABI, signer);
-        // switch by type: call appropriate function (example names)
-        let tx;
-        if(type === 'GM') tx = await contract.gm();
-        if(type === 'GN') tx = await contract.gn();
-        if(type === 'SLEEP') tx = await contract.goSleep();
-        setStatus('Tx sent, waiting confirmation...');
-        await tx.wait();
-        setStatus('Ritual '+type+' confirmed!');
-        alert('Ritual '+type+' confirmed on-chain!');
-      } catch(err){
-        console.error('ritual error', err);
-        alert('Error ' + (err.error?.message || err.message || err));
-      }
+    } else {
+      console.log(switchError);
     }
+  }
+}
 
-    gmBtn.addEventListener('click', ()=>performRitual('GM'));
-    gnBtn.addEventListener('click', ()=>performRitual('GN'));
-    sleepBtn.addEventListener('click', ()=>performRitual('SLEEP'));
+async function connectWallet() {
+  try {
+    // DETECT metamask/okx/bitget
+    if (window.ethereum) {
+      provider = window.ethereum;
+      await provider.request({ method: "eth_requestAccounts" });
+      web3 = new Web3(provider);
+      let accounts = await web3.eth.getAccounts();
+      selectedAccount = accounts[0];
 
-    // initial UI
-    enableRitualButtons(false);
-    showWallet('0x...');
-    setStatus('Not connected');
+      await switchToBase();
 
-    // small helper: try auto-connect if user previously used WC (optional)
-    // (commented out to avoid unexpected popups)
-    // window.addEventListener('load', () => { /* optionally try connect */ });
+      enableButtons();
+      document.getElementById("connectBtn").innerHTML =
+        "✅ " + selectedAccount.slice(0,6) + "..." + selectedAccount.slice(-4);
 
-  })();
-  </script>
+    } else {
+      // fallback WALLETCONNECT
+      provider = new WalletConnectProvider.default({
+        rpc: {
+          8453: BASE_RPC_URL
+        }
+      });
+
+      await provider.enable();
+      web3 = new Web3(provider);
+
+      let accounts = await web3.eth.getAccounts();
+      selectedAccount = accounts[0];
+
+      enableButtons();
+      document.getElementById("connectBtn").innerHTML =
+        "✅ " + selectedAccount.slice(0,6) + "..." + selectedAccount.slice(-4);
+    }
+  } catch (err) {
+    showError("Failed to connect wallet.\n" + err.message);
+  }
+}
+
+function enableButtons() {
+  document.getElementById("gmBtn").classList.remove("disabled");
+  document.getElementById("gnBtn").classList.remove("disabled");
+  document.getElementById("sleepBtn").classList.remove("disabled");
+}
+
+async function sendRitual(type) {
+  if (!web3 || !selectedAccount) return showError("Wallet not connected!");
+
+  try {
+    alert(type + " Ritual executed! (dummy)");
+    // placeholder — nanti diganti contract call
+  } catch (err) {
+    showError("Error calling ritual: " + err.message);
+  }
+}
+
+// click events
+document.getElementById("connectBtn").onclick = connectWallet;
+document.getElementById("gmBtn").onclick = () => sendRitual("GM");
+document.getElementById("gnBtn").onclick = () => sendRitual("GN");
+document.getElementById("sleepBtn").onclick = () => sendRitual("GoSleep");
+</script>
+
 </body>
 </html>
